fixed alignment of blog prev and next buttons on large screens

--- a/css/post-navigation.css
+++ b/css/post-navigation.css
@@ -1,5 +1,20 @@
-.post-navigation {}
+.post-navigation {
+	margin: 0;
+	column-gap: 1em;
+	justify-content: space-between;
+}
 
-.previous-button {}
+.post-navigation > a {
+	font-size: 1.25em;
+	flex-grow: 1;
+	text-align: center;
+}
 
-.next-button {}
+.post-navigation > a:only-child {
+	flex-grow: 0;
+	width: 50%;
+}
+
+.previous-button:only-child {
+	margin-left: auto;
+}
